<resources>
    <string name="app_name">BocciInterviewApp</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">ぼっち面接</string>
    <string name="interview_question">面接練習</string>
    <string name="gesture">所作確認</string>
    <string name="interviewquestion">質問と回答</string>
    <string name="history">履歴</string>
    <string name="title_activity_question">Question</string>
    <string name="mensetu1">ドアを2回軽くノックします。\n「どうぞ。お入り下さい。」という声が聞こえたら、ドアを開けます。\n応答がない場合は再度ノックをし、それでも応答がない場合は「失礼いたします。」と言ってからドアを開けます。</string>
    <string name="mensetu2">ドアを少し開け、面接官の目を見て「失礼いたします。」と大きな声で挨拶します。\n（複数面接官がいる場合は、中央に座っている人の目を見て下さい。）\n挨拶は「失礼します。」でも良いですが、「失礼しまーす。」と「ま」の音が伸びてしまうと印象が悪いので注意して下さい。\n（基本的には「失礼いたします」を推奨。）\nドアは片手で開けます。\n（面接時は鞄を持っていることが多いため、両手で開けるのは不可能です。）\n身体が正面を向くように、右開きのドアなら右手で、左開きのドアならば左でドアを開けます。\n左の図では、受験者から見て右開きのドアなので右手でドアを開けることで、自然と身体が正面に向くようにしています。\n面接官の方に完全な背面を見せないよう、斜めの立ち位置でドアを閉めます。\nドアを閉める音が鳴らないように注意しましょう。</string>
    <string name="mensetu3">面接官の方に向き直り、一礼します。「よろしくお願いいたします！」と挨拶してから一礼しても良いです。\n姿勢良く歩きます。（面接官と目を合わせ続ける必要はありません。）\n他の人から猫背を指摘される方は要注意。自分では正しい姿勢が分かりづらいですから、友達などにアドバイスを求めましょう。</string>
    <string name="mensetu4">イスの横（入ってきたドアに近い側）に立ちます。\n男性は手を身体の横にまっすぐ伸ばし、女性は身体の前に両手を重ねます。（左手よりも右手が前になるように重ねて下さい。）\n「大学名とお名前をお願いします。」と言われたら、面接官の目を見て「○○大学○○学部○○学科の○○　○○と申します。\n本日はよろしくお願いいたします。」と言い、その後一礼（45度）します。\n（自己紹介と一礼を同時に行わないように注意して下さい。）\n「どうぞ、お掛け下さい。」と言われますから、「失礼いたします。」と言い、その後一礼（15度）し\n（このときも、「失礼いたします。」と一礼を同時に行わないように注意して下さい。）着席します。</string>
    <string name="mensetu6">座るときは深く腰をかけ過ぎないように注意します。（イスに半分ほど腰をかける程度が良いでしょう。）\n男性は手を軽く握り、ひざの上に置きます。女性は両手を重ね、ひざの中央に置きます。</string>
    <string name="mensetu7">背筋を伸ばして顎を引きます。\n明るい表情で、目線は面接官の方に向けます。\n下を向いたり、質問者と全く違う方向を見たりしてはいけません。</string>
    <string name="mensetu8">\n返答するときは、明るく少し大きめの声で話します。\n髪をいじったり、貧乏ゆすりしたりするなど、癖が出ないように気をつけます。\n面接中メモは取らない。</string>
    <string name="mensetu9">面接官が「これで面接を終わります。」などの面接終了の合図をしたら、座ったまま「本日はお忙しい中、お時間をいただき誠にありがとうございました。」とお礼を述べます。\nその後、座ったまま一礼します。</string>
    <string name="mensetu10">イスの横に立って「失礼いたします。」と言い、その後一礼（45度）します。\n一礼が済んだら、ドア付近まで姿勢よく歩きます。（面接官と目を合わせ続ける必要はありません。）</string>
    <string name="mensetu11">面接官の方に向き直り、再度「失礼いたします。」と言い、その後一礼（45度）します。\n一礼が済んだら、ドアを開け、面接室の外に出ます。\nドアを閉める前に、面接官の方に向き直り、しっかりとアイコンタクトを取ります。\nドアを閉める際は音が鳴らないように注意しましょう。</string>
    <string name="writehint">読み上げデータ入力</string>
    <string name="Onsei">音声入力</string>
    <string name="cansel">取消</string>
    <string name="clear">クリア</string>
    <string name="writetitle">文字入力してね</string>
    <string name="textsave">保存</string>
    <string name="textlisten">聴く</string>
</resources>
